--- a/css/style.css
+++ b/css/style.css
@@ -45,14 +45,22 @@ body {
 .wall-left {
     /* left : -500vw; */
     width : 1000vw;
+    background : #f8f8f8;
     transform : rotateY(90deg) translateZ(-500vw);
 }
 .wall-right {
     /* left : -500vw; */
     width : 1000vw;
+    background : #f8f8f8;
     /* transform : rotateY(90deg) translateZ(100vw); */
     transform : rotateY(90deg) translateZ(-400vw);
 }
+/*house가 translateZ -490vw이므로 적절히 앞으로 땡김*/
+.wall-front-a { transform: translateZ(300vw); }
+.wall-front-b { transform: translateZ(50vw); }
+.wall-front-c { transform: translateZ(-200vw); }
+.wall-front-d { transform: translateZ(-500vw); }
+
 .wall-content {
     display: flex;
     align-items: center;
