--- a/css/style.css
+++ b/css/style.css
@@ -70,3 +70,17 @@ body {
 .wall-title {
     font-size: 3rem;
 }
+.progress-bar-con {
+    position : fixed;
+    left :0;
+    top : 0;
+    z-index :100;
+    width : 100vw;
+    height: 5px;
+    background : #555;
+}
+.progress-bar {
+    width : 0;
+    height: 100%;
+    background : #fa6de2;
+}
